[package]
name = "nsdetect"
description = "Small utility to detect AWS NS takeover"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
trust-dns-resolver = "0.21.2"
anyhow = "1.0.57"