[package]
name = "nsdetect"
description = "Small utility to detect dangling NS pointes that could be used for AWS NS takeover"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/alexanderkjall/nsdetect"
keywords = ["DNS"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
trust-dns-resolver = "0.21.2"
anyhow = "1.0.57"
tokio = "1.18.0"
futures = "0.3.21"
termcolor = "1.1.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
